--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,7 @@ jobs:
     - uses: actions/checkout@master
     - run: |
         sudo echo '82.156.192.56 yii.k8s' | sudo tee -a /etc/hosts
+        cat /etc/hosts
     - name: deploy to cluster
       uses: steebchen/kubectl@v2.0.0
       with: # defaults to latest kubectl binary version
