--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,13 +8,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     # 让K8s应用deployment
-    - uses: actions/checkout@master
     - run: |
         sudo echo "82.156.192.56 yii.k8s" | sudo tee -a /etc/hosts
         curl 82.156.192.56:30180 -v
+    - uses: actions/checkout@master
     - name: deploy to cluster
       uses: steebchen/kubectl@v2.0.0
       with: # defaults to latest kubectl binary version
         config: ${{ secrets.KUBE_CONFIG_DATA }}
         version: v1.21.4
-        command: version
+        command: get nodes
