--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,7 @@ jobs:
     - name: deploy to cluster
       uses: steebchen/kubectl@v2.0.0
       with: # defaults to latest kubectl binary version
+        arg: --network=host
         config: ${{ secrets.KUBE_CONFIG_DATA }}
         version: v1.21.4
         command: get nodes
