--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,4 +18,4 @@ jobs:
         config: ${{ secrets.KUBE_CONFIG_DATA }}
         version: v1.21.4
         command: get nodes
-        myHosts: ${{ secrets.KUBE_HOSTS_CONFIG}}
+        kubeHosts: ${{ secrets.KUBE_HOSTS_CONFIG}}
