To be optimized

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,10 +7,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    # 让K8s应用deployment
-    # - run: |
-        # sudo echo "82.156.192.56 yii.k8s" | sudo tee -a /etc/hosts
-        # curl yii.k8s:30180 -v
+    # get node list
+
     - uses: actions/checkout@master
     - name: deploy to cluster
       uses: coderYii/kubectl@v2.0.0-y
