--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    # get node list
+    # get pod list
     - uses: actions/checkout@master
     - name: deploy to cluster
       uses: coderYii/kubectl@v2.0.0-y
@@ -15,4 +15,4 @@ jobs:
         kubeHosts: ${{ secrets.KUBE_HOSTS_CONFIG}}
         config: ${{ secrets.KUBE_CONFIG_DATA }}
         version: v1.21.4
-        command: get nodes
+        command: get pod
