--- a/.github/workflows/time.yml
+++ b/.github/workflows/time.yml
@@ -15,10 +15,15 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     steps:
-     - name: Get current time
-       uses: gerred/actions/current-time@master
-       id: current-time
-     - name: Use current time
-       env: 
-         TIME: "${{ steps.current-time.outputs.time }}"
-       run: echo $TIME
+    - name: Get current time
+      uses: srfrnk/current-time@master
+      id: current-time
+      with:
+        format: YYYYMMDD
+    - name: Use current time
+      env:
+        TIME: "${{ steps.current-time.outputs.time }}"
+        F_TIME: "${{ steps.current-time.outputs.formattedTime }}"
+      run: echo $TIME $F_TIME
+    - name: print time
+      run: echo $F_TIME
