--- a/.github/workflows/time.yml
+++ b/.github/workflows/time.yml
@@ -22,10 +22,11 @@ jobs:
         format: YYYYMMDDHHmmss
     - name: Use current time
       env:
-        TIME: "${{ steps.current-time.outputs.time }}"
+        # TIME: "${{ steps.current-time.outputs.time }}"
         F_TIME: "${{ steps.current-time.outputs.formattedTime }}"
       run: |
-        echo $TIME $F_TIME
+        # echo $TIME 
+        echo $F_TIME
         echo $F_TIME > currentTime.txt
     - name: print time
       run: |
